# vatnarlibcpp

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
include/: Components2D.h  Game.h  IGameObject.h  PhysicsComponent.h  Renderer.h  SpriteObject.h
src/: Game.cpp  IGameObject.cpp  Point2.cpp  Renderer.cpp  SpriteObject.cpp  Vector2.cpp  main.cpp
vatnarlibcpp/: CMakeLists.txt  Circle2D.cpp  Circle2D.h  Point2D.cpp  Point2D.h  main.cpp
vatnarlibcpp/include/: Circle2D.h  Point2.h  Point2D.h  Renderer.h  Vector2.h
vatnarlibcpp/src/: Circle2D.cpp  Point2D.cpp  Vector2.cpp  main.cpp
